--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>${maven.commons-lang3}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
