--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <maven.junit>5.4.2</maven.junit>
         <maven.commons-lang3>3.0</maven.commons-lang3>
         <maven.spring-security-jwt>1.0.10.RELEASE</maven.spring-security-jwt>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencies>
