--- a/security-rest3/src/main/resources/application.properties
+++ b/security-rest3/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # JPA
-#spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 # spring.jpa.generate-ddl=false
 # spring.jpa.hibernate.ddl-auto=validate
@@ -25,3 +25,8 @@ spring.profiles.active=jpa
 
 # error
 server.error.include-stacktrace=always
+
+# transaction
+logging.level.ROOT=INFO
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
